# Cell_BLAST

./: .gitignore  .readthedocs.yml  LICENSE  README.md  Snakefile  env.yml  pyproject.toml  release.sh  setup.py  sync.sh
.github/workflows/: build.yml  release.yml
BLAST2CO_dev/: BLAST2CO.py
Cell_BLAST/: __init__.py  blast.py  config.py  data.py  directi.py  latent.py  message.py  metrics.py  model.py  module.py  nn.py  prob.py  rebuild.py  rmbatch.py  utils.py  weighting.py
DataMigration/: h5_to_h5ad.py  readme.md
Datasets/: .gitignore  ACA_datasets.csv  ACA_datasets_2.csv  ACA_datasets_V1  additional_datasets.csv  aligned_datasets.csv  data_pack.sh
Evaluation/: .gitignore  Snakefile  batch_removal.smk  batch_removal_composition.py  batch_removal_config.json  batch_removal_metrics.py  batch_removal_plot.R  batch_removal_worker.smk  benchmark_bias_removal.R  benchmark_bias_removal.py  benchmark_bias_removal.sh  benchmark_blast.R  benchmark_blast.py  benchmark_blast.sh  benchmark_dimension_reduction.R  benchmark_dimension_reduction.py  benchmark_dimension_reduction.sh  benchmark_time.R  benchmark_time.py  benchmark_time.sh  build_BLAST.py  cluster_cls.json  devices.txt  dimension_reduction.smk  dimension_reduction_config.json  dimension_reduction_metrics.py  dimension_reduction_plot.R  dimension_reduction_worker.smk  feature_selection.py  feature_selection.smk  feature_selection_config.json  feature_selection_metrics.py  feature_selection_plot.R  hyperparameters.smk  hyperparameters_config.json  hyperparameters_config_ss2.json  hyperparameters_metrics.py  hyperparameters_plot.R  jobscript_cls.sh  merge_datasets.py  (+44 more)
Notebooks/: .gitignore  README.md
Utilities/: classifier.py  clustering.py  compute_cell_confidence.py  data.R  densityClust.R  find_markers.py  markers.py  merge_datasets.py  parse_eggnog_emapper_annotations.py  ranking.py  run_classifier.py  run_classifier_as_dimension_reduction.py  sankey.py  sankey.sh  select_genes_scmap.R  select_genes_scmarker.R  select_genes_seurat.R  summarize_cl.py  test_for_simulated_dupgene.py  utils.R  visualize.R  visualize.py
doc/: README.md  conf.py  doc.rst  index.rst  install.rst  start.rst  upload.sh
docs/: BLAST.ipynb  DIRECTi.ipynb  api.rst  conf.py  index.rst  install.rst  migration.rst  start.rst  upload.sh
packrat/: packrat.opts
test/: .gitignore  coverage.R  dag.obo  regression_refresh.py  regression_test.py  repeatability_test.py  test.R  test.py  test.sh  test_blast.py  test_data.py  test_directi.py  test_utils.py  tree.json  tree.obo
(+323 files in other folders)
